--- a/WheelChef(Chef)/app/src/main/res/values/colors.xml
+++ b/WheelChef(Chef)/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="color_accent">#FFAB00</color>
     <color name="single_line_line">#CDC5BA</color>
     <color name="window_dark">#303030</color>
-    <color name="color_green">#4CAF50</color>
+    <color name="color_green">#009688</color>
+    <color name="background">#F5F5F5</color>
 </resources>
