--- a/WheelChef(Chef)/app/src/main/res/values/styles.xml
+++ b/WheelChef(Chef)/app/src/main/res/values/styles.xml
@@ -31,8 +31,8 @@
 
     <style name="CustomEditText"  parent="Material.Widget.EditText">
         <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Body1</item>
-        <item name="android:textColor">@color/abc_primary_text_material_dark</item>
-        <item name="android:textColorHint">@color/abc_secondary_text_material_dark</item>
+        <item name="android:textColor">@color/window_dark</item>
+        <item name="android:textColorHint">#000000</item>
         <item name="et_dividerColor">@drawable/color_divider</item>
         <item name="et_labelTextColor">@drawable/color_label</item>
         <item name="et_supportTextErrorColor">#FFFF0000</item>
@@ -42,7 +42,7 @@
     <style name="CustomCheckBoxDrawable" parent="Material.Drawable.CheckBox">
         <item name="cbd_strokeColor">@drawable/color_switch</item>
         <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Body1</item>
-        <item name="android:textColor">#FFFFFFFF</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
     <style name="CustomSpinner" parent="Material.Widget.Spinner">
