--- a/WheelChef(Chef)/app/src/main/res/drawable/color_divider.xml
+++ b/WheelChef(Chef)/app/src/main/res/drawable/color_divider.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="false" android:color="@color/abc_secondary_text_material_dark" />
+    <item android:state_focused="false" android:color="@color/grey" />
     <item android:state_focused="true" android:color="@color/color_accent" />
 </selector>
