--- a/WheelChef(Chef)/app/src/main/res/drawable/color_label.xml
+++ b/WheelChef(Chef)/app/src/main/res/drawable/color_label.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true" android:state_focused="false" android:color="@color/abc_secondary_text_material_dark" />
+    <item android:state_enabled="true" android:state_focused="false" android:color="@color/window_dark" />
     <item android:state_enabled="true" android:state_focused="true" android:color="@color/color_accent" />
-    <item android:state_enabled="false" android:color="@color/abc_secondary_text_material_dark" />
+    <item android:state_enabled="false" android:color="@color/grey" />
 </selector>
