--- a/WheelChef(Chef)/app/src/main/res/layout/row_spn.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/row_spn.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-    android:textColor="@color/abc_primary_text_material_dark"
+    android:textColor="@color/dark_grey"
     android:id="@+id/row_spn_tv"
     android:layout_width="match_parent"
     android:layout_height="32dp"
