--- a/WheelChef(Chef)/app/src/main/res/layout/activity_register.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/activity_register.xml
@@ -87,6 +87,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
         <TextView
+            style="@style/CustomTextColor"
             android:layout_width="35dp"
             android:layout_height="39dp"
             android:layout_marginTop="15dp"
@@ -179,13 +180,23 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:gravity="left|center_vertical"
+            android:layout_gravity="center_vertical"
             android:text="I'm at home!"/>
+        <TextView
+            style="@style/CustomTextColor"
+            android:id="@+id/textview_chef_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:text="Category: "
+            android:layout_gravity="center_vertical"/>
         <Spinner
             android:id="@+id/spinner_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="128dp"
-            android:gravity="right|center_vertical"
+            android:minWidth="60dp"
+            android:gravity="left|center_vertical"
+            android:layout_gravity="center_vertical"
             android:prompt="@string/prompt_spinner_category"
             />
 
