--- a/WheelChef(Chef)/app/src/main/res/layout/row_dish_list.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/row_dish_list.xml
@@ -8,12 +8,18 @@ android:background="@color/color_primary_dark"
 android:layout_margin="10dp"
 >
 
-<ImageView
-    android:id="@+id/dish_list_dish_photo"
-    android:layout_width="140dp"
-    android:layout_height="88dp"
-    android:scaleType="fitStart"
-    />
+    <com.pkmmte.view.CircularImageView
+        android:id = "@+id/dish_list_dish_photo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/unknown_person"
+        android:layout_margin="10dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="fitCenter"
+        app:border="false"
+        app:shadow="false" />
+
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
