--- a/WheelChef(Chef)/app/src/main/res/layout/activity_view_dish_detail.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/activity_view_dish_detail.xml
@@ -27,70 +27,243 @@
                 android:orientation="vertical"
                 android:layout_marginTop="?attr/actionBarSize"
         >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
 
-    <ImageView
-        android:id="@+id/imageview_dish_photo"
-        android:layout_margin="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        android:layout_gravity="center_horizontal"/>
+                <ImageView
+                    android:id="@+id/imageview_dish_photo"
+                    android:layout_margin="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scaleType="fitStart"/>
+                <com.rey.material.widget.ImageButton
+                    android:background="@drawable/circle_color_accent_48dp"
+                    android:id="@+id/btn_edit_dish_photo"
+                    style="@style/FlatWaveColorButtonRippleStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_create_white_36dp"
+                    app:rd_delayClick="afterRelease"/>
+            </RelativeLayout>
 
-    <TextView
-        style="@style/CustomTextColor"
-        android:id="@+id/textview_dish_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="0dp"/>
-    <TextView
-        style="@style/CustomTextColor"
-        android:id="@+id/textview_dish_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="0dp"/>
-    <TextView
-        style="@style/CustomTextColor"
-        android:id="@+id/textview_dish_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="0dp"/>
-    <TextView
-        style="@style/CustomTextColor"
-        android:id="@+id/textview_dish_discount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="0dp"/>
-    <TextView
-        style="@style/CustomTextColor"
-        android:id="@+id/textview_dish_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="0dp"/>
-    </LinearLayout>
+            <View
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/single_line_line"/>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:id="@+id/textview_const_dish_name"
+                    android:layout_alignParentLeft="true"
+                    android:text="Dish Name:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"/>
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:layout_toEndOf="@id/textview_const_dish_name"
+                    android:id="@+id/textview_dish_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textSize="20dp"/>
+                <com.rey.material.widget.ImageButton
+                    android:background="@drawable/circle_color_accent_48dp"
+                    android:id="@+id/btn_edit_dish_name"
+                    style="@style/FlatWaveColorButtonRippleStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_create_white_36dp"
+                    app:rd_delayClick="afterRelease"/>
+            </RelativeLayout>
+
+            <View
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/single_line_line"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:id="@+id/textview_const_dish_desc"
+                    android:layout_alignParentLeft="true"
+                    android:text="Dish Description:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"/>
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:layout_toEndOf="@id/textview_const_dish_desc"
+                    android:id="@+id/textview_dish_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textSize="20dp"/>
+                <com.rey.material.widget.ImageButton
+                    android:background="@drawable/circle_color_accent_48dp"
+                    android:id="@+id/btn_edit_dish_desc"
+                    style="@style/FlatWaveColorButtonRippleStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_create_white_36dp"
+                    app:rd_delayClick="afterRelease"/>
+            </RelativeLayout>
+
+            <View
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/single_line_line"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:id="@+id/textview_const_dish_price"
+                    android:layout_alignParentLeft="true"
+                    android:text="Dish Price:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"/>
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:layout_toEndOf="@id/textview_const_dish_price"
+                    android:id="@+id/textview_dish_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textSize="20dp"/>
+                <com.rey.material.widget.ImageButton
+                    android:background="@drawable/circle_color_accent_48dp"
+                    android:id="@+id/btn_edit_dish_price"
+                    style="@style/FlatWaveColorButtonRippleStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_create_white_36dp"
+                    app:rd_delayClick="afterRelease"/>
+            </RelativeLayout>
+
+            <View
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/single_line_line"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:id="@+id/textview_const_dish_discount"
+                    android:layout_alignParentLeft="true"
+                    android:text="Dish Discount:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"/>
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:layout_toEndOf="@id/textview_const_dish_discount"
+                    android:id="@+id/textview_dish_discount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textSize="20dp"/>
+                <com.rey.material.widget.ImageButton
+                    android:background="@drawable/circle_color_accent_48dp"
+                    android:id="@+id/btn_edit_dish_discount"
+                    style="@style/FlatWaveColorButtonRippleStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_create_white_36dp"
+                    app:rd_delayClick="afterRelease"/>
+            </RelativeLayout>
+
+            <View
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/single_line_line"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp">
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:id="@+id/textview_const_dish_category"
+                    android:layout_alignParentLeft="true"
+                    android:text="Dish Category:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="20dp"/>
+                <TextView
+                    style="@style/CustomTextColor"
+                    android:layout_toEndOf="@id/textview_const_dish_category"
+                    android:id="@+id/textview_dish_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textSize="20dp"/>
+                <com.rey.material.widget.ImageButton
+                    android:background="@drawable/circle_color_accent_48dp"
+                    android:id="@+id/btn_edit_dish_category"
+                    style="@style/FlatWaveColorButtonRippleStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_create_white_36dp"
+                    app:rd_delayClick="afterRelease"/>
+            </RelativeLayout>
+
+
+        </LinearLayout>
     </ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
