--- a/WheelChef(Chef)/app/src/main/res/layout/fragment_home.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/fragment_home.xml
@@ -5,26 +5,39 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     >
+    <com.baoyz.widget.PullRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layout_home_swipe"
+        android:layout_centerHorizontal="true"
+        app:refreshType="smartisan"
+        app:refreshColors="@array/refresh_colors">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ListView
+                android:id="@+id/dishes_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:clipToPadding="false"
+                android:choiceMode="singleChoice"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="10.0dp"
+                android:minHeight="500dp"/>
+
+
+
+        </RelativeLayout>
+    </com.baoyz.widget.PullRefreshLayout>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="@drawable/shadow_toolbar_drops"
         android:layout_alignParentTop="true"/>
-    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/layout_home_swipe"
-        android:layout_centerHorizontal="true">
-    <ListView
-        android:id="@+id/dishes_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:clipToPadding="false"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10.0dp"/>
-    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
     <com.rey.material.widget.FloatingActionButton
         android:id="@+id/homeFabButton"
         style="@style/FloatingWaveColorActionButton"
