--- a/WheelChef(Chef)/app/src/main/res/layout/header_menu_main.xml
+++ b/WheelChef(Chef)/app/src/main/res/layout/header_menu_main.xml
@@ -12,7 +12,6 @@
         android:src="@drawable/header_bg_1"
         android:scaleType="fitXY"/>
     <com.pkmmte.view.CircularImageView
-        android:layout_gravity="center_horizontal"
         android:id = "@+id/profile_image"
         android:layout_width="76dp"
         android:layout_height="76dp"
@@ -22,6 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="24dp"
+        android:scaleType="fitCenter"
         app:border="true"
         app:border_color="@android:color/white"
         app:border_width="2dp"
